--- a/src/main.css
+++ b/src/main.css
@@ -29,25 +29,39 @@ header{
 header a{
   color:#f3f3f3;
   text-decoration: none;
+
 }
 header>h3{
   margin-left: 30px;
+  font-size: 4vh;
 }
 .header-right{
   display: flex;
 }
 .header-right>p{
   margin-right: 10px;
+  font-size: 3vh;
+}
+.curriculum-warp{
+  border:1px solid #ccc;
+  margin: 18px;
+  box-shadow: 1px 1px 1px 1px #ccc;
+  width: 39vh;
 }
 .curriculum{
-  width: 35vh;
+  width: 39vh;
   height: 25vh;
   background-color: #ccc;
-  margin: 15px;
+
 }
-.curriculum h3{
+.curriculum img{
+  width: 39vh;
+  height: 25vh;
+}
+.curriculum-warp>h3{
   text-align: center;
-  line-height: 25vh;
+  line-height: 6vh;
+  font-size: 3vh;
 }
 .list{
   display: flex;
@@ -57,10 +71,21 @@ header>h3{
 h4{
   text-align: center;
   /*margin-top: 135px;*/
-  margin-bottom: 50px;
+margin-bottom: 3px;
 }
 .index{
   padding-top: 135px;
+}
+.index h4{
+  font-size: 4vh;
+  color:#8d8d8d;
+}
+.line{
+  width: 18vh;
+  height: 3px;
+  background-color: #00a797;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
 .signin{
   display: flex;
@@ -69,22 +94,23 @@ h4{
 }
 .signin button{
   display: block;
-  width: 140px;
-  line-height: 62px;
+  width: 18vh;
+  line-height: 8vh;
   background-color: #e0165b;
   border: none;
   border-line:none;
   color: #fff;
-  font-size: 25px;
+  font-size: 4vh;
   margin: 0  auto;
   margin-top: 100px;
 }
 .signin label{
   color:#03a9f4;
+  font-size: 4vh;
 }
 .mima1{
-  margin-right: 25px;
+  margin-right: 3vh;
 }
 .mima2{
-  margin-right: 41px;
+  margin-right: 7vh;
 }
